--- a/src/templates/profile/add_course.html
+++ b/src/templates/profile/add_course.html
@@ -1,4 +1,4 @@
-{% extends "navigation/navigation.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 
@@ -7,7 +7,7 @@
     <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
         <h1 class="text-3xl font-bold text-primary_black text-left">Añadir Curso al Portafolio</h1>
         <h2 class="text-lg font-semibold text-primary_dark text-left">Cursos</h2> 
-        <p class="block text-primary_black font-light mt-4 font-sans">
+        <p class="block text-primary_black font-normal mt-4 font-sans semi">
             Aquí puedes agregar información de cursos relevantes que hayas realizado.        </p>
     </div>
 
@@ -55,20 +55,18 @@
                             </label>
                         </div>
                         <p class="text-xs text-gray-500">Puedes adjuntar un archivo aquí</p>
-                        <!-- Success icon that appears when a file is uploaded -->
-                        <div id="uploadSuccess" class="hidden text-green-600 text-sm flex items-center mt-2">
-                            <svg class="h-6 w-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                            </svg>
-                            Archivo subido correctamente
-                        </div>
+                    <div id="uploadSuccess" class="hidden absolute top-0 right-0 mt-2 mr-2 text-green-500">
+                        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                        </svg>
+                    </div>
                     </div>
                 </div>
             </div>
 
             <div class="flex justify-center">
                 <button type="submit" class="bg-primary_dark text-white font-bold py-3 px-6 rounded-md hover:bg-primary_black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary_dark">
-                    Confirm
+                    Confirmar
                 </button>
             </div>
         </form>
@@ -87,8 +85,8 @@
             <svg class="mx-auto h-12 w-12 text-primary_medium mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
-            <h3 class="text-lg font-semibold text-primary_black">Information saved successfully</h3>
-            <p class="text-gray-600 mt-2">Would you like to keep adding courses?</p>
+            <h3 class="text-lg font-semibold text-primary_black">Información guardada exitosamente</h3>
+            <p class="text-gray-600 mt-2">¿Deseas seguir agregando cursos?</p>
             <div class="mt-4 flex justify-center space-x-4">
                 <button id="addMore" class="bg-primary_medium text-white px-4 py-2 rounded hover:bg-primary_dark">Yes</button>
                 <button id="submitForm" class="bg-gray-100 text-gray-600 px-4 py-2 rounded hover:bg-primary_dark">No</button>
