Feat: Frontedn in add_experience

--- a/src/templates/profile/add_project.html
+++ b/src/templates/profile/add_project.html
@@ -4,10 +4,10 @@
 
 <div class="pt-16 pb-10 px-4 sm:px-6 lg:px-8 bg-bg_white">
 
-    <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-8">
+    <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
         <h1 class="text-3xl font-bold text-primary_black text-left">Añadir Proyecto al Portafolio</h1>
         <h2 class="text-lg font-semibold text-primary_dark text-left">Proyectos</h2>
-        <p class="block text-primary_black font-nromal mt-4 font-sans">
+        <p class="block text-primary_black font-normal mt-4 font-sans">
             Aquí puedes agregar información de proyectos relevantes que hayas realizado.
         </p>
     </div>
