Refactor: Fix typo in course description tag

--- a/src/templates/profile/add_course.html
+++ b/src/templates/profile/add_course.html
@@ -21,7 +21,7 @@
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="course_description">Ingresa una descriçión del curso</label>
+                <label class="block text-primary_black font-medium" for="course_description">Ingresa una descripión del curso</label>
                 <textarea name="course_description" id="course_description" rows="4" class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium" placeholder="Descripción del curso" required></textarea>
             </div>
 
