--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -7,7 +7,7 @@
         {% include "navigation/navbar.html" %}
     </div>
     <div class="w-full px-9 py-2">
-        <div class="flex flex-col gap-5 h-screen">
+        <div class="flex flex-col gap-5">
             {% include "navigation/top_bar_controls.html" %}
             <!-- Aqui va el content -->
             {% block app_content %}
