--- a/src/templates/projects/project_requirements.html
+++ b/src/templates/projects/project_requirements.html
@@ -17,7 +17,7 @@
 
         <!-- Botón para regresar a la página principal del proyecto -->
         <div class="mt-8">
-            <a href="{% url 'project_detail' project.pk %}" class="bg-[#636AF2] text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+            <a href="/project/{{project.id}}/milestone" class="bg-[#636AF2] text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
                 Volver al proyecto
             </a>
         </div>
