--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -29,7 +29,7 @@
                 <p class="text-gray-600 mb-4">{{ project.description|truncatewords:20 }}</p>
                 <div class="flex justify-between items-center">
                     <span class="text-sm text-gray-500">Presupuesto: ${{ project.budget }}</span>
-                    <a href="{% url 'project_detail' project.pk %}" class="text-blue-500 hover:underline">Ver Detalles</a>
+                    <a href="/project/{{project.id}}/milestone" class="text-blue-500 hover:underline">Ver Detalles</a>
                 </div>
             </div>
         </div>
