--- a/src/templates/projects/task_creation.html
+++ b/src/templates/projects/task_creation.html
@@ -60,7 +60,7 @@
             <div class="mt-8">
                 <label for="milestone" class="block text-md font-medium text-primary_black">Hito asociado</label>
 
-                <select name="milestone" id="milestone"
+                <select name="milestone" id="milestone" required
                     class="mt-1 block w-1/2 px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm">
                     {% for milestone in milestones %}
                     <option value="{{milestone.id}}">{{milestone.name}}</option>
